--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="es">
 </div>
 <head>
+  <meta name="google-site-verification" content="nTZUWJ2iwv6Ay7nm8CG-c-K9IcrScYvH8RoueVKdcHQ" />
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title> Celia Fany Ururi Quea </title>
