--- a/index.html
+++ b/index.html
@@ -1,48 +1,109 @@
 <!DOCTYPE html>
 <html lang="es">
-</div>
 <head>
-  <meta name="google-site-verification" content="nTZUWJ2iwv6Ay7nm8CG-c-K9IcrScYvH8RoueVKdcHQ" />
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title> Celia Fany Ururi Quea </title>
+  <title>Celia Fany Ururi Quea | Estudiante de Administración de Negocios - UCSP</title>
+  <meta name="description" content="Página personal oficial de Celia Fany Ururi Quea, estudiante de Administración de Negocios en la Universidad Católica San Pablo de Arequipa">
+  <meta name="keywords" content="Celia Fany Ururi Quea, UCSP, Universidad Católica San Pablo, Administración de Negocios, Arequipa, Estudiante">
+  <meta name="author" content="Celia Fany Ururi Quea">
+  
+  <meta name="google-site-verification" content="nTZUWJ2iwv6Ay7nm8CG-c-K9IcrScYvH8RoueVKdcHQ" />
+  
+  <meta property="og:title" content="Celia Fany Ururi Quea - Página Personal">
+  <meta property="og:description" content="Estudiante de Administración de Negocios en la Universidad Católica San Pablo">
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://tuusuario.github.io">
+  <meta property="og:image" content="https://tuusuario.github.io/images/foto-perfil.jpg">
+  
+  <link rel="icon" href="favicon.ico" type="image/x-icon">
+  
   <link rel="stylesheet" href="style.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 </head>
 <body>
-  <h1>Bienvenid@ a mi pagina web personal</h1>
-  <p>Hola, mi nombre es Celia Fany Ururi Quea
-    Alumna de la <a href="https://ucsp.edu.pe/">Universidad Catolica San Pablo</a>
-    de la carrera <a href="https://ucsp.edu.pe/carreras/administracion-negocios/">Administracion de Negocios</a></p>
-  <h2>Cursos </h2>
-  <ul>
-    <li>Estadistica y probabilidades-</li>
-    <li>Contabilidad para administradores</li>
-    <li>Calculo en una variable</li>
-    <li>Moral</li>
-    <li>Historia de occidente II</li>
-    <li>Matematica financiera</li>
-    <li>Pensamiento computacional
-</li>
-<a href=https://www.linkedin.com/in/ecuadrosv/>Ernesto Cuadros Vargaz</a>
+  <header>
+    <div class="container">
+      <h1>Celia Fany Ururi Quea</h1>
+      <p class="subtitle">Estudiante de Administración de Negocios</p>
+    </div>
+  </header>
 
-  </ul>
-  <h2>HOBBIES </h2>
-  </ul>
-  <li>Bailar</li>
-  <li>Tomar fotografias</li>
-  <li>Viajar</li>
+  <main class="container">
+    <section id="about">
+      <h2>Sobre mí</h2>
+      <p>Hola, soy Celia Fany Ururi Quea, estudiante de la carrera de <strong>Administración de Negocios</strong> en la <a href="https://ucsp.edu.pe/" target="_blank" rel="noopener noreferrer">Universidad Católica San Pablo</a> en Arequipa, Perú.</p>
+      <p>Me apasiona el mundo de los negocios y estoy desarrollando mis habilidades en áreas como finanzas, marketing y gestión empresarial.</p>
+    </section>
 
-  <h2>MIS COMPAÑEROS DE CURSO:</h2>
-  <ul>
-    <li>Jennifer Miranda</li>
-<a href="https://www.linkedin.com/uas/login-submit">Anghelina Quispe Tinta</a>
-    <li>Nicoll Cardenas</li>
-    <li>Brigida Mora</li>
-    <li>Brad Caleb</li>
-  </ul>
-  <h2>Contacto</h2>
- <li>puedes contactarme por:
-<a href=“uqfanny@gmail.com> Celia Fany Ururi
+    <section id="education">
+      <h2>Formación Académica</h2>
+      <ul>
+        <li><strong>Universidad Católica San Pablo</strong> - Administración de Negocios (En curso)</li>
+      </ul>
+    </section>
 
+    <section id="courses">
+      <h2>Cursos Actuales</h2>
+      <ul>
+        <li>Estadística y probabilidades</li>
+        <li>Contabilidad para administradores</li>
+        <li>Cálculo en una variable</li>
+        <li>Moral</li>
+        <li>Historia de occidente II</li>
+        <li>Matemática financiera</li>
+        <li>Pensamiento computacional</li>
+      </ul>
+      <p>Profesor: <a href="https://www.linkedin.com/in/ecuadrosv/" target="_blank" rel="noopener noreferrer">Ernesto Cuadros Vargas</a></p>
+    </section>
+
+    <section id="classmates">
+      <h2>Compañeros de Curso</h2>
+      <ul>
+        <li>Jennifer Miranda</li>
+        <li><a href="https://www.linkedin.com/uas/login-submit" target="_blank" rel="noopener noreferrer">Anghelina Quispe Tinta</a></li>
+        <li>Nicoll Cárdenas</li>
+        <li>Brígida Mora</li>
+        <li>Brad Caleb</li>
+      </ul>
+    </section>
+
+    <section id="hobbies">
+      <h2>Intereses y Hobbies</h2>
+      <ul>
+        <li>Bailar</li>
+        <li>Fotografía</li>
+        <li>Viajar</li>
+        <li>Emprendimiento</li>
+        <li>Tecnología</li>
+      </ul>
+    </section>
+  </main>
+
+  <footer class="container">
+    <section id="contact">
+      <h2>Contacto</h2>
+      <ul class="contact-list">
+        <li>Email: <a href="mailto:uqfanny@gmail.com">uqfanny@gmail.com</a></li>
+        <li>LinkedIn: <a href="#" target="_blank" rel="noopener noreferrer">Perfil profesional</a></li>
+      </ul>
+    </section>
+  </footer>
+
+  <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "Person",
+      "name": "Celia Fany Ururi Quea",
+      "url": "https://tuusuario.github.io",
+      "sameAs": [],
+      "jobTitle": "Estudiante de Administración de Negocios",
+      "alumniOf": {
+        "@type": "EducationalOrganization",
+        "name": "Universidad Católica San Pablo"
+      }
+    }
+  </script>
 </body>
 </html>
