--- a/index.html
+++ b/index.html
@@ -61,11 +61,11 @@
     <section id="classmates">
       <h2>Compañeros de Curso</h2>
       <ul>
-        <li>Jennifer Miranda</li>
         <li><a href="https://www.linkedin.com/uas/login-submit" target="_blank" rel="noopener noreferrer">Anghelina Quispe Tinta</a></li>
-        <li>Nicoll Cárdenas</li>
-        <li>Brígida Mora</li>
-        <li>Brad Caleb</li>
+        <li><a href="https://dianacampano.github.io/" target="_blank" rel="noopener noreferrer">Diana Campano Chalco</a></li>
+        <li><a href="https://hagriw.github.io/Anapaula-Lucero-Gamio-Villegas/" target="_blank" rel="noopener noreferrer">Anapaula Lucero Gamio Villegas</a></li>
+        <li><a href="https://taniayurn.github.io/Tania-Yurnet-Chuctaya-Cjuno/" target="_blank" rel="noopener noreferrer">Tania Yurnet Chuctaya Cjuno</a></li>
+        <li><a href="https://yeseniabpd.github.io/Yesenia-Bel-n-Portillo-Duran/" target="_blank" rel="noopener noreferrer">Yesenia Belen Portillo Duran</a></li>
       </ul>
     </section>
 
