--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
       <h2>Contacto</h2>
       <ul class="contact-list">
         <li>Email: <a href="mailto:uqfanny@gmail.com">uqfanny@gmail.com</a></li>
-        <li>LinkedIn: <a href="#" target="_blank" rel="noopener noreferrer">Perfil profesional</a></li>
+        <li>LinkedIn: <a href="https://www.linkedin.com/in/fanny-uq-010617357/?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=ios_app" target="_blank" rel="noopener noreferrer">Perfil profesional</a></li>
       </ul>
     </section>
   </footer>
